--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     integrity="sha512-3gPqFfD3xqZfNLwZKkWRA6/4QqhnMgHH5M4Xc6r5jHwIP+dmyg8T2Wgh1tq2WbiKUtWm8El1bYmjOP9ScUNFzQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -28,7 +28,7 @@
 
   <header class="fixed w-full bg-white shadow z-20">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-      <img src="/assets/AN.png" alt="assets/AN.png" class="h-16" />
+      <img src="assets/AN.png" alt="assets/AN.png" class="h-16" />
       <nav class="space-x-4 font-medium">
         <a href="#home" class="hover:text-blue-500 transition">Home</a>
         <a href="#about" class="hover:text-blue-500 transition">About</a>
@@ -40,7 +40,7 @@
 
   <section id="home" class="h-screen relative overflow-hidden bg-white flex items-center justify-center">
 
-    <img src="/assets/backgrund-hero.png" alt="Background"
+    <img src="assets/backgrund-hero.png" alt="Background"
       class="absolute inset-0 w-full h-full object-cover blur-md opacity-50 z-0" />
 
     <div class="relative z-10 text-center animate-fade-in-up">
